<resources>
    <string name="app_name">الأذكـــــار</string>
    <string name="God">الرحمن، الرحيم، الملك، القدوس، السلام، المؤمن، المهيمن، العزيز، الجبار، المتكبر، الخالق، البارئ، المصور، الغفار، القهار، الوهاب، الرزّاق، الفتّاح، العليم، القابض، الباسط، الخافض، الرافع، المعزّ، المذلّ، السميع، البصير، الحكم، العدل، اللطيف، الخبير، الحليم، العظيم، الغفور، الشكور، العلي، الكبير، الحفيظ، المقيت، الحسيب، الجليل، الجميل، الكريم، الرقيب، المجيب، الواسع، الحليم، الودود، المجيد، الباعث، الشهيد، الحق، الوكيل، القوي، المتين، الولي، الحميد، المحصي، المبدئ، المعيد، المحيي، المميت، الحي، القيوم، الواجد، الماجد، الواحد، الأحد، الصمد، القادر، المقتدر، المقدّم، المؤخّر، الأول، الآخر، الظاهر، الباطن، الوالي، المتعالي، البر، التواب، المنتقم، العفو، الرؤوف، مالك الملك، ذو الجلال والإكرام، المقسط، الجامع، الغني، المغني، المعطي، المانع، الضار، النافع، النور، الهادي، البديع، الباقي، الوارث، الرشيد، الصبور
       </string>
    <string name="Fadal">بسم الله والحمد لله والصلاة والسلام على رسول الله صلى الله عليه وسلم وعلى آله وصحبه أجمعين.</string>
    <string name="Fadal1">إنَّ من أفضل الأعمال الصالحة اليسيرة التي تقرب المسلم إلى ربه جل وعلا الذكرُ.</string>
    <string name="Fadal2">وقد ذكر الله تعالى الذاكرين في كتابه بأجل الذكر، فقال الله سبحانه: {إِنَّ فِي خَلْقِ السَّمَاوَاتِ وَالْأَرْضِ وَاخْتِلَافِ اللَّيْلِ وَالنَّهَارِ لَآيَاتٍ لِّأُولِي الْأَلْبَابِ . الَّذِينَ يَذْكُرُونَ اللَّهَ قِيَامًا وَقُعُودًا وَعَلَى جُنُوبِهِمْ وَيَتَفَكَّرُونَ فِي خَلْقِ السَّمَاوَاتِ وَالْأَرْضِ رَبَّنَا مَا خَلَقْتَ هَذا بَاطِلًا سُبْحَانَكَ فَقِنَا عَذَابَ النَّارِ}</string>
    <string name="Fadal3">وبيَّن في آية أخرى فضل الذكر، وأنه تطمئن به قلوب أهل الإيمان؛ فقال: {الَّذِينَ آمَنُوا وَتَطْمَئِنُّ قُلُوبُهُم بِذِكْرِ اللَّهِ أَلَا بِذِكْرِ اللَّهِ تَطْمَئِنُّ الْقُلُوبُ} [الرعد:28]، وجعل جزاء الذاكر أن يذكره سبحانه وهل هناك أرفع من أن يذكر الله سبحانه عبده المؤمن؟! قال تعالى: {فَاذْكُرُونِي أَذْكُرْكُمْ وَاشْكُرُوا لِي وَلَا تَكْفُرُونِ}</string>
    <string name="Fadal4">وعن أبي هريرة رضي الله عنه أنَّ النَّبِيَّ صلَّى الله عليه وسلم قال: «يقول الله عزَّ وجلَّ: أنا عند ظن عبدي بي، وأنا معه حين يذكرني، فإن ذكرني في نفسه ذكرته في نفسي، وإن ذكرني في ملأ ذكرته في ملأٍ هُمْ خير منهم»</string>
    <string name="Fadal5">قال ابن القيم رحمه الله: "ولو لم يكن في الذكر إلا هذه وحدها لكفى بها فضلاً وشرفًا" (الوابل الصيب من الكلم الطيب.</string>
    <string name="Fadal6">وانظر إلى هذا الحديث العجيب في بيان فضل الذكر والذاكرين: عن أبي هريرة رضي الله عنه أن النبي صلى الله عليه وسلم قال: «ألا أخبركم بخير أعمالكم وأزكاها عند مليككم، وأرفعها في درجاتكم، وخير لكم من إنفاق الذهب والفضة، وخير لكم مِنْ أَنْ تلقَوْا عدوَّكُمْ فتضربوا أعناقهم ويضربوا أعناقكم؟» قالوا: "بلى يا رسول الله"! قال: «ذكر الله عز وجل» (سنن الترمذي [5/459] برقم [3377]).</string>
    <string name="Fadal7">وعن أنس رضِي الله عنه قال: قال رسول الله صلى الله عليه وسلم: «لأن أقعد مع قوم يذكرون الله منذ صلاة الغداة حتَّى تطلع الشمس، أَحَبُّ إليَّ من أن أعتق أربعة من ولد إسماعيل، ولأن أَقْعُدَ مع قوم يذكرون الله من صلاة العصر إلى أن تغرب الشمس، أَحَبُّ إليَّ من أعتق أربعة» (سنن أبي داود [3/324] برقم [3667]).</string>
    <string name="Fadal8">وعن أبي هريرة رضي الله عنه قال: "كان رسول الله صلى الله عليه وسلم يسير في طريقه إلى مكة، فمرَّ على جبل يقال له جمدان" فقال: «سيروا هذا جمدان، سبق المُفَرِّدُونَ». قالوا: "وما المُفَرِّدونَ يا رسول الله"؟! قال: «الذاكرون الله كثيرًا والذاكرات» (صحيح مسلم [4/2062] برقم [2676]).</string>
    <string name="Fadal9">.قال أبو بكر: "ذَهَبَ الذَّاكِرُون الله بالخير كله" (شُعَب الإيمان [1/408]). وقال أبو الدرداء: "لكل شيء جلاء، وإن جلاء القلوب ذكر الله عز وجل" (الوابل الصيب من الكلم الطيب ص67). وقال شيخ الإسلام ابن تيمية: "الذكر للقلب مثل الماء للسمك، فكيف يكون حال السمك إذا فقد الماء؟!" (الوابل الصيب من الكلم الطيب.</string>
    <string name="Fadal10">عن أبي هريرة رضي الله عنه أن النبي صلَّى الله عليه وسلم قال: «من قال لا إله إلا الله وحده لا شريك له، له الملك وله الحمد وهو على كل شيء قدير، في يوم مائة مرة،كانت له عدل عشر رقاب، وكتبت له مائة حسنة، ومحيت عنه مائة سيئة، وكانت له حرزًا من الشيطان يومه ذلك حتى يُمْسِيَ، ولم يأتِ أحد بأفضل مما جاء به إلا رجل عمل أكثر منه، ومن قال: سبحان الله وبحمده في يوم مائة مرة، حُطَّتْ خطاياه وإن كانت كانت مثل زبد البحر».</string>
    <string name="Fadal11">وعن أبي هريرة رضي الله عنه قال: "جاء الفقراء إلى النبي صلى الله عليه وسلم فقالوا: "ذهب أهل الدثور من الأموال بالدرجات العلى والنعيم المقيم، يصلون كما نصلي، ويصومون كما نصوم، ولهم فضل من أموال يحجون بها ويعتمرون، ويجاهدون، ويتصدقون". قال: «ألا أحدثكم بأمر إن أخذتم به أدركتم من سبقكم، ولم يدرككم أحد بعدكم، وكنتم خيرَ مَنْ أنتم بين ظهرانيه، إلا من عمل مثله، تسبحون وتحمدون وتكبرون خلف كل صلاة ثلاثًا وثلاثين.</string>
    <string name="Fadal12">وقد أمر الله عباده المؤمنين بالذكر الكثير فقال تعالى: {يَا أَيُّهَا الَّذِينَ آمَنُوا اذْكُرُوا اللَّهَ ذِكْرًا كَثِيرًا * وَسَبِّحُوهُ بُكْرَةً وَأَصِيلًا} [الأحزاب:41-42]. والنبيُّ صلى الله عليه وسلم شرع لأمته من الأذكار ما يملأ الأوقات! فلكل حالة أو زمن ذكرٌ يخُصُّه؛ ففي الصباح أذكار مخصوصة، وفي المساء كذلك وعند النوم، واليقظة، وعند دخول البيت والخروج منه، وعند طعامه وشرابه، وغير ذلك من أحواله. ولا شك أن من حافظ على هذه الأذكار فإنه سيكون من الذاكرين الله كثيرًا والذاكرات، وبهذا يأمن مما اتصف به المنافقون حيث يقول الله عنهم: {إِنَّ الْمُنَافِقِينَ يُخَادِعُونَ اللَّهَ وَهُوَ خَادِعُهُمْ وَإِذَا قَامُوا إِلَى الصَّلَاةِ قَامُوا كُسَالَى يُرَاءُونَ النَّاسَ وَلَا يَذْكُرُونَ اللَّهَ إِلَّا قَلِيلًا} [النساء:142].</string>
    <string name="Alsabah1">(أَصبَحْنا على فِطرةِ الإسلامِ، وعلى كَلِمةِ الإخلاصِ، وعلى دِينِ نَبيِّنا محمَّدٍ صلَّى اللهُ عليه وسلَّمَ، وعلى مِلَّةِ أبِينا إبراهيمَ، حَنيفًا مُسلِمًا، وما كان مِنَ المُشرِكينَ).</string>
    <string name="Alsabah2">(بسمِ اللهِ الذي لا يَضرُ مع اسمِه شيءٌ في الأرضِ ولا في السماءِ وهو السميعُ العليمِ).[٢](ثلاثُ مراتٍ).</string>
    <string name="Alsabah3">(سبحانَ اللَّهِ وبحمدِهِ مئةَ مرَّةٍ)</string>
    <string name="Alsabah4">(اللَّهُمَّ أنْتَ رَبِّي لا إلَهَ إلَّا أنْتَ، خَلَقْتَنِي وأنا عَبْدُكَ، وأنا علَى عَهْدِكَ ووَعْدِكَ ما اسْتَطَعْتُ، أعُوذُ بكَ مِن شَرِّ ما صَنَعْتُ، أبُوءُ لكَ بنِعْمَتِكَ عَلَيَّ، وأَبُوءُ لكَ بذَنْبِي فاغْفِرْ لِي، فإنَّه لا يَغْفِرُ الذُّنُوبَ إلَّا أنْتَ).</string>
    <string name="Alsabah5">(اللَّهمَّ بِكَ أصبَحنا، وبِكَ أمسَينا، وبِكَ نحيا وبِكَ نموتُ وإليكَ المصيرُ، وإذا أمسَى فليقُلْ: اللَّهمَّ بِكَ أمسَينا وبِكَ أصبَحنا وبِكَ نحيا وبِكَ نموتُ وإليكَ النُّشورُ).</string>
    <string name="Altaeam1">الدعاء قبل الطعام

" إذا أكل أحدكم الطعام فليقل: "بِسم الله " فإن نسي في أوله فليقل: "بِسمِ الله في أوله وآخره" .

" من أطعمه الله الطعام فليقل: "اللهم بارك لنا فيه وأطعمنا خيراً منه" ومن سقاه الله لبناً فليقل: "اللهم بارك لنا فيه وزدنا منه" .</string>
    <string name="Altaeam2">الدعاء عند الفراغ من الطعام

" الحمد لله الذي أطعمني هذا وزرقني من غير حول مني ولا قوة"

" الحمدُ لله حمداً كثيراً طيباً مباركاً فيهِ غيْرَ [مَكْفيٍّ ولا] مُوَدَّع ولا مُستَغنَى عَنْهُ ربّنا" .</string>
    <string name="Altaeam3">دعاء الضيف لصاحب الطعام

" اللهُمَّ بَارِكْ لَهُم فيما رَزَقتهْمْ، واغْفِر لهم وارحَمْهُم " .</string>
    <string name="Altaeam4">الدعاء لمن سقاه أو إذا أراد ذلك

" اللهُمَّ أَطْعِمْ مَنْ أطْعَمَني وأَسْقِ مَنْ سْقَاني " .
    </string>
    <string name="Alhaji1">قد ربط الله تعالى بين الحج والذكر فجعله من أهم مقاصد الركن الخامس من أركان الدين، قال تعالى :</string>
    <string name="Alhaji2">"واذكروا الله في أيام معدودات ". [سورة البقرة - الآية 203]</string>
    <string name="Alhaji3">وقال تعالى :

"وأذن في الناس بالحج يأتوك رجالا وعلى كل ضامر يأتين من كل فج عميق ﴿27﴾ ليشهدوا منافع لهم ويذكروا اسم الله في أيام معلومات على ما رزقهم من بهيمة الأنعام". [سورة الحج - الآية 28]</string>
    <string name="Alhaji4">فجعل من أهم مقاصد الحج أن يقوم العبد بذكر الله وشكره.

وأكد النبي صلى الله عليه وسلم ارتباط الحج بذكر الله فقال صلى الله عليه وسلم:

" إنما جعل الطواف بالبيت وبين الصفا والمروة ورمي الجمار لإقامة ذكر الله". [رواه أبو داود والترمذي]</string>
    <string name="Alhaji5">وهكذا يتجلى شأن الذكر في الحج، ويستبين عظم منزلته ورفيع مكانته. وفيما يلي الأدعية النبوية والأذكار الواردة في محطات الحج ومواقيته الزمانية والمكانية والعمرة والزيارة فاحفظها ليكون حجك مبرورا وسعيك مشكورا.</string>
    <string name="Alhaji6">الذكر عند الاحرام
"سبحان الله والحمد لله والله أكبر"</string>
    <string name="Alhaji7">عاء التلبية في الحج والعمرة
"لبيك اللهم لبيك، لبيك لا شريك لك لبيك إن الحمد، والنعمة، لك والملك، لا شريك لك".  [البخاري (2/ 170)، ومسلم (1184)]</string>
    <string name="Alhaji8">الدعاء عند رؤية الكعبة
"اللهم أنت السلام ومنك السلام، فحينا ربنا بالسلام". [أبي شيبة 7/ 102، والبيهقي 5/ 73]</string>
    <string name="Alhaji9">الدعاء عند استلام الحجر الأسود
"باسم الله والله أكبر". [الطبراني (862)، (863)، والبيهقي (5/ 79)]
"لا إله إلا الله والله أكبر، اللهم تصديقا بكتابك، وسنة نبيك صلى الله عليه وسلم". [الطبراني (865)]</string>
    <string name="Alhaji10">الدعاء بين الركن اليماني والحجر الأسود
"ربنا آتنا في الدنيا حسنة، وفي الآخرة حسنة، وقنا عذاب النار". [أبو داود 2/179 وأحمد 3/411]</string>
    <string name="Alhaji11">الدعاء في الطواف
"اللهم ربنا آتنا في الدنيا حسنة وفي الآخرة حسنة وقنا عذاب النار". [الطبراني (857)، والبيهقي (5/ 84)]</string>
    <string name="Alhaji12">"لا إله إلا الله وحده، لا شريك له، له الملك وله الحمد، بيده الخير، وهو على كل شيء قدير".</string>
    <string name="Alhaji13">الدعاء بعد ركعتي الطواف
اللهم اعصمني بدينك، وطاعة رسولك صلى الله عليه وسلم.
اللهم جنبني حدودك.
اللهم اجعلني ممن يحبك، ويحب ملائكتك، ورسلك، وعبادك الصالحين اللهم حببني إليك، وإلى ملائكتك، ورسلك، وعبادك الصالحين.
اللهم آتني من خير ما تؤتي عبادك الصالحين في الدنيا والآخرة.
اللهم يسرني لليسرى، وجنبني العسرى، واغفر.</string>
    <string name="Alhaji14">الدعاء عند صعود الصفا والمروة
عن جابر بن عبد الله رضي الله عنه، قال: سمعت رسول الله صلى الله عليه وسلم حين خرج من المسجد يريد الصفا، يقول: "نبدأ بما بدأ به" فبدأ بالصفا، وقرأ: {إن الصفا والمروة من شعائر الله} وكان إذا وقف على الصفا يكبر ثلاثا، ويقول:
"لا إله إلا الله وحده لا شريك له، له الملك وله الحمد وهو على كل شيء قدير، لا إله إلا الله، أنجز وعده، ونصر عبده، وهزم الأحزاب وحده".
ثم أعاد هذا الكلام. [مسلم (1218)، وأحمد (3/ 320، 321)]</string>
    <string name="Alhaji15">الدعاء على الصفا
"اللهم إنك قلت: {ادعوني أستجب لكم} وإنك لا تخلف الميعاد، وإني أسألك كما هديتني إلى الإسلام ألا تنزعه مني حتى تتوفاني، وأنا مسلم".
"اللهم اعصمنا بدينك، وطواعيتك، وطواعية رسولك، وجنبنا حدودك".
"اللهم اجعلنا نحبك، ونحب ملائكتك، وأنبياءك، ورسلك، ونحب عبادك الصالحين".
"اللهم حببنا إليك وإلى ملائكتك، وإلى أنبيائك، ورسلك، وإلى عبادك الصالحين".
"اللهم يسرنا لليسرى، وجنبنا وجنبنا العسرى، واغفر لنا في الآخرة". [البيهقي (5/ 94)]</string>
    <string name="Alhaji16">الدعاء في السعي بين الصفا والمروة
"رب اغفر وارحم إنك أنت الأعز الأكرم". [الطبراني (870)، والبيهقي (5/ 95)]</string>
    <string name="Alhaji17">الدعاء بعرفات
"لا إله إلا الله وحده لا شريك له، له الملك وله الحمد، وهو على كل شيء قدير". [الترمذي (3579)، والطبراني (784)]</string>
    <string name="Alhaji18">دعاء السلف الصالح في عرفات
"لا إله إلا الله وحده لا شريك له، له الملك وله الحمد، وهو على كل شيء قدير".
"اللهم اهدنا بالهدى، وزينا بالتقوى، واغفر لنا في الآخرة والأولى".
"ثم يخفض صوته، ثم يقول: اللهم إني أسألك من فضلك وعطائك رزقا طيبا مباركا".
"اللهم إنك أمرت بالدعاء، وقضيت على نفسك بالاستجابة، وأنت لا تخلف وعدك، ولا تكذب عهدك، اللهم ما أحببت من خير فحببه إلينا، ويسره لنا، وما كرهت من شيء فكرهه إلينا وجنبناه، ولا تنزع عنا الإسلام بعد إذ أعطيتنا".</string>
    <string name="Alhaji19">الدعاء عند رمي جمرة العقبة عند كل حصاة
"الله أكبر، الله أكبر، الله أكبر".
"اللهم اجعله حجا مبرورا وذنبا مغفورا". [الطبراني (881)، والبيهقي (5/ 129)]</string>
    <string name="Alhaji20">الذكر عند ذبح الأضاحي
بسم الله , اللهم تقبل من محمد وآل محمد ومن أمة محمد</string>
    <string name="Alhaji21">دعاء الرجوع من الحج أو العمرة
"الله أكبر، الله أكبر، الله أكبر".
"لا إله إلا الله وحده لا شريك له، له الملك، وله الحمد، وهو على كل شيء قدير، آيبون، تائبون، عابدون، ساجدون".
"اللٰهم اجعله حجا مبرورا وسعيا مشكورا وذنبا مغفورا".
</string>
</resources>