<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Azkar_Alhaji"
    android:background="@drawable/bak">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="40dp"
        android:textColor="#074514"
        android:textStyle="bold"
        android:text="اذكار الحج"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji1"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji2"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji3"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji4"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji5"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji6"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji7"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji8"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji9"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji10"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji11"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji12"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji13"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji14"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji15"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji16"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji17"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji18"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji19"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji20"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Alhaji21"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="..........."
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>