<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Azkar_Altaeam"
    android:background="@drawable/bak">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="40dp"
        android:textColor="#074514"
        android:textStyle="bold"
        android:text="اذكار الطعام"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Altaeam1"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Altaeam2"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Altaeam3"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="******************"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Altaeam4"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="..............."
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"/>


        </LinearLayout>
    </ScrollView>




</RelativeLayout>